[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Objects/Combat/Laser.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Particles/Corruption.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Objects/Warning.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Objects/Laser new.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4, 5 )

[node name="Laser" type="Area2D"]

visible = false
position = Vector2( 80, 72 )
scale = Vector2( 0.25, 20 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
vertical = false

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="SoundWarning" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = -16.0
pitch_scale = 1.8
autoplay = false
mix_target = 0
bus = "Master"

[node name="SoundActivate" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = -8.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="TimerShow" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="TimerBlink1" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="TimerBlink2" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="TimerBlink3" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="TimerActivate" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="TimerFade" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TimerDestroy" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 3.5
one_shot = true
autostart = false

[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]

[connection signal="timeout" from="TimerShow" to="." method="_on_TimerShow_timeout"]

[connection signal="timeout" from="TimerBlink1" to="." method="_on_TimerBlink1_timeout"]

[connection signal="timeout" from="TimerBlink2" to="." method="_on_TimerBlink2_timeout"]

[connection signal="timeout" from="TimerBlink3" to="." method="_on_TimerBlink3_timeout"]

[connection signal="timeout" from="TimerActivate" to="." method="_on_TimerActivate_timeout"]

[connection signal="timeout" from="TimerFade" to="." method="_on_TimerFade_timeout"]

[connection signal="timeout" from="TimerDestroy" to="." method="_on_TimerDestroy_timeout"]


